fix overflowing images

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -395,6 +395,7 @@ figure {
   img {
     display: block;
     margin: 0 auto;
+    max-width: 100%;
   }
 }
 
